--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,7 +22,7 @@
 
     <parent>
         <groupId>org.apache.celeborn</groupId>
-        <artifactId>remote-shuffle-service</artifactId>
+        <artifactId>celeborn-parent</artifactId>
         <version>0.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
