--- a/server-master/pom.xml
+++ b/server-master/pom.xml
@@ -19,7 +19,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>remote-shuffle-service</artifactId>
+        <artifactId>celeborn-parent</artifactId>
         <groupId>org.apache.celeborn</groupId>
         <version>0.2.0-SNAPSHOT</version>
     </parent>
