--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,26 @@
     <maven.plugin.surefire.version>2.22.0</maven.plugin.surefire.version>
 
     <!-- Allow modules to enable / disable certain build plugins easily. -->
-    <build.testJarPhase>prepare-package</build.testJarPhase>
+    <testJarPhase>prepare-package</testJarPhase>
     <jars.target.dir>${project.build.directory}/scala-${scala.binary.version}/jars</jars.target.dir>
+
+    <!-- for JDK-17 test-->
+    <extraJavaTestArgs>
+      -XX:+IgnoreUnrecognizedVMOptions
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens=java.base/java.io=ALL-UNNAMED
+      --add-opens=java.base/java.net=ALL-UNNAMED
+      --add-opens=java.base/java.nio=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+      --add-opens=java.base/sun.security.action=ALL-UNNAMED
+      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+    </extraJavaTestArgs>
 
     <distMgmtReleaseId>apache.releases.https</distMgmtReleaseId>
     <distMgmtReleaseName>Apache Release Distribution Repository</distMgmtReleaseName>
@@ -98,6 +116,7 @@
     <module>server-common</module>
     <module>server-master</module>
     <module>server-worker</module>
+    <module>tests/celeborn-spark-it</module>
   </modules>
 
   <repositories>
@@ -481,9 +500,23 @@
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>${maven.plugin.jar.version}</version>
+          <executions>
+            <execution>
+              <id>prepare-test-jar</id>
+              <phase>${testJarPhase}</phase>
+              <goals>
+                <goal>test-jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.plugin.surefire.version}</version>
-          <!-- Note config is repeated in scalatest config -->
           <configuration>
             <includes>
               <include>**/*Spec*.*</include>
@@ -491,9 +524,14 @@
               <include>**/*Test*.*</include>
             </includes>
             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <argLine>-ea -Xmx4g -Xss4m -XX:MaxMetaspaceSize=2g -XX:ReservedCodeCacheSize=128m ${extraJavaTestArgs} -Dio.netty.tryReflectionSetAccessible=true</argLine>
+            <systemProperties>
+              <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
+              <log4j2.configurationFile>src/test/resources/log4j2-test.xml</log4j2.configurationFile>
+              <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+              <spark.driver.memory>1g</spark.driver.memory>
+            </systemProperties>
             <failIfNoTests>false</failIfNoTests>
-            <threadCount>8</threadCount>
-            <forkCount>8C</forkCount>
           </configuration>
           <executions>
             <execution>
@@ -542,42 +580,6 @@
               <configuration>
                 <minimizeJar>false</minimizeJar>
                 <shadedArtifactAttached>true</shadedArtifactAttached>
-                <artifactSet>
-                  <includes>
-                    <!-- Include here the dependencies you
-                        want to be packed in your fat jar -->
-                    <include>*:*</include>
-                  </includes>
-                </artifactSet>
-                <filters>
-                  <filter>
-                    <artifact>*:*</artifact>
-                    <excludes>
-                      <exclude>META-INF/*.SF</exclude>
-                      <exclude>META-INF/*.DSA</exclude>
-                      <exclude>META-INF/*.RSA</exclude>
-                      <exclude>**/log4j.properties</exclude>
-                    </excludes>
-                  </filter>
-                </filters>
-                <transformers>
-                  <transformer
-                      implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                    <resource>reference.conf</resource>
-                  </transformer>
-                  <transformer
-                      implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                    <resource>
-                      META-INF/services/org.apache.spark.sql.sources.DataSourceRegister
-                    </resource>
-                  </transformer>
-                  <transformer
-                      implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                    <resource>
-                      META-INF/services/org.apache.hadoop.fs.FileSystem
-                    </resource>
-                  </transformer>
-                </transformers>
               </configuration>
             </execution>
           </executions>
@@ -599,6 +601,13 @@
               <phase>process-test-resources</phase>
               <goals>
                 <goal>testCompile</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>attach-scaladocs</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>doc-jar</goal>
               </goals>
             </execution>
           </executions>
@@ -694,6 +703,11 @@
 
     <plugins>
       <plugin>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+      </plugin>
+      
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
       </plugin>
@@ -701,21 +715,16 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>${maven.plugin.jar.version}</version>
-        <executions>
-          <execution>
-            <id>prepare-test-jar</id>
-            <phase>${build.testJarPhase}</phase>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-            <configuration>
-              <excludes>
-                <exclude>log4j.properties</exclude>
-              </excludes>
-            </configuration>
-          </execution>
-        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
       </plugin>
 
       <plugin>
