--- a/pom.xml
+++ b/pom.xml
@@ -15,23 +15,42 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
     <version>27</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.apache.celeborn</groupId>
   <artifactId>celeborn-parent</artifactId>
   <version>0.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Aliyun E-MapReduce Shuffle Service Project Parent POM</name>
+  <name>Celeborn Project Parent POM</name>
+
+  <modules>
+    <module>common</module>
+    <module>client</module>
+    <module>server-common</module>
+    <module>server-master</module>
+    <module>server-worker</module>
+    <module>tests/celeborn-spark-it</module>
+  </modules>
+
+  <distributionManagement>
+    <repository>
+      <id>${distMgmtReleaseId}</id>
+      <name>${distMgmtReleaseName}</name>
+      <url>${distMgmtReleaseUrl}</url>
+    </repository>
+    <snapshotRepository>
+      <id>${distMgmtSnapshotsId}</id>
+      <name>${distMgmtSnapshotsName}</name>
+      <url>${distMgmtSnapshotsUrl}</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -85,8 +104,7 @@
     <jars.target.dir>${project.build.directory}/scala-${scala.binary.version}/jars</jars.target.dir>
 
     <!-- for JDK-17 test-->
-    <extraJavaTestArgs>
-      -XX:+IgnoreUnrecognizedVMOptions
+    <extraJavaTestArgs>-XX:+IgnoreUnrecognizedVMOptions
       --add-opens=java.base/java.lang=ALL-UNNAMED
       --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
       --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
@@ -99,8 +117,7 @@
       --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
       --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
       --add-opens=java.base/sun.security.action=ALL-UNNAMED
-      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
-    </extraJavaTestArgs>
+      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</extraJavaTestArgs>
 
     <distMgmtReleaseId>apache.releases.https</distMgmtReleaseId>
     <distMgmtReleaseName>Apache Release Distribution Repository</distMgmtReleaseName>
@@ -109,55 +126,6 @@
     <distMgmtSnapshotsName>Apache Development Snapshot Repository</distMgmtSnapshotsName>
     <distMgmtSnapshotsUrl>https://repository.apache.org/content/repositories/snapshots</distMgmtSnapshotsUrl>
   </properties>
-
-  <modules>
-    <module>common</module>
-    <module>client</module>
-    <module>server-common</module>
-    <module>server-master</module>
-    <module>server-worker</module>
-    <module>tests/celeborn-spark-it</module>
-  </modules>
-
-  <repositories>
-    <repository>
-      <id>central</id>
-      <name>Maven Repository</name>
-      <url>https://repo.maven.apache.org/maven2</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>central</id>
-      <url>https://repo.maven.apache.org/maven2</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
-
-  <distributionManagement>
-    <repository>
-      <id>${distMgmtReleaseId}</id>
-      <name>${distMgmtReleaseName}</name>
-      <url>${distMgmtReleaseUrl}</url>
-    </repository>
-    <snapshotRepository>
-      <id>${distMgmtSnapshotsId}</id>
-      <name>${distMgmtSnapshotsName}</name>
-      <url>${distMgmtSnapshotsUrl}</url>
-    </snapshotRepository>
-  </distributionManagement>
 
   <dependencyManagement>
     <dependencies>
@@ -284,8 +252,8 @@
         <version>${google.jsr305.version}</version>
       </dependency>
       <dependency>
-        <artifactId>protobuf-java</artifactId>
         <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-java</artifactId>
         <version>${protobuf.version}</version>
       </dependency>
       <dependency>
@@ -314,8 +282,8 @@
         <version>${commons-crypto.version}</version>
         <exclusions>
           <exclusion>
-            <artifactId>jna</artifactId>
             <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -440,20 +408,20 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <scope>test</scope>
         <version>${junit.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest_${scala.binary.version}</artifactId>
-        <scope>test</scope>
         <version>${scalatest.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-funsuite_${scala.binary.version}</artifactId>
-        <scope>test</scope>
         <version>${scalatest.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.scalamock</groupId>
@@ -475,6 +443,33 @@
     </dependencies>
   </dependencyManagement>
 
+  <repositories>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Maven Repository</name>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <build>
     <pluginManagement>
       <plugins>
@@ -485,13 +480,13 @@
           <executions>
             <execution>
               <id>create-tmp-dir</id>
-              <phase>generate-test-resources</phase>
               <goals>
                 <goal>run</goal>
               </goals>
+              <phase>generate-test-resources</phase>
               <configuration>
                 <target>
-                  <mkdir dir="${project.build.directory}/tmp"/>
+                  <mkdir dir="${project.build.directory}/tmp"></mkdir>
                 </target>
               </configuration>
             </execution>
@@ -505,10 +500,10 @@
           <executions>
             <execution>
               <id>prepare-test-jar</id>
-              <phase>${testJarPhase}</phase>
               <goals>
                 <goal>test-jar</goal>
               </goals>
+              <phase>${testJarPhase}</phase>
             </execution>
           </executions>
         </plugin>
@@ -547,14 +542,6 @@
           <groupId>org.scalatest</groupId>
           <artifactId>scalatest-maven-plugin</artifactId>
           <version>${maven.plugin.scalatest.version}</version>
-          <executions>
-            <execution>
-              <id>test</id>
-              <goals>
-                <goal>test</goal>
-              </goals>
-            </execution>
-          </executions>
           <configuration>
             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
             <filereports>TestSuite.txt</filereports>
@@ -565,6 +552,14 @@
               <spark.driver.memory>1g</spark.driver.memory>
             </systemProperties>
           </configuration>
+          <executions>
+            <execution>
+              <id>test</id>
+              <goals>
+                <goal>test</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
 
         <plugin>
@@ -573,10 +568,10 @@
           <version>${maven.plugin.shade.version}</version>
           <executions>
             <execution>
-              <phase>package</phase>
               <goals>
                 <goal>shade</goal>
               </goals>
+              <phase>package</phase>
               <configuration>
                 <minimizeJar>false</minimizeJar>
                 <shadedArtifactAttached>true</shadedArtifactAttached>
@@ -591,24 +586,24 @@
           <executions>
             <execution>
               <id>scala-compile-first</id>
-              <phase>process-resources</phase>
               <goals>
                 <goal>compile</goal>
               </goals>
+              <phase>process-resources</phase>
             </execution>
             <execution>
               <id>scala-test-compile-first</id>
-              <phase>process-test-resources</phase>
               <goals>
                 <goal>testCompile</goal>
               </goals>
+              <phase>process-test-resources</phase>
             </execution>
             <execution>
               <id>attach-scaladocs</id>
-              <phase>verify</phase>
               <goals>
                 <goal>doc-jar</goal>
               </goals>
+              <phase>verify</phase>
             </execution>
           </executions>
         </plugin>
@@ -620,10 +615,10 @@
           <executions>
             <execution>
               <id>copy-module-dependencies</id>
-              <phase>package</phase>
               <goals>
                 <goal>copy-dependencies</goal>
               </goals>
+              <phase>package</phase>
               <configuration>
                 <includeScope>runtime</includeScope>
                 <outputDirectory>${jars.target.dir}</outputDirectory>
@@ -637,14 +632,6 @@
           <artifactId>apache-rat-plugin</artifactId>
           <version>${maven.plugin.rat.version}</version>
           <inherited>true</inherited>
-          <executions>
-            <execution>
-              <phase>verify</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-            </execution>
-          </executions>
           <configuration>
             <excludeSubProjects>false</excludeSubProjects>
             <numUnapprovedLicenses>0</numUnapprovedLicenses>
@@ -655,6 +642,14 @@
             </licenseFamilies>
             <excludesFile>.rat-excludes</excludesFile>
           </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>check</goal>
+              </goals>
+              <phase>verify</phase>
+            </execution>
+          </executions>
         </plugin>
 
         <plugin>
@@ -674,7 +669,7 @@
                 <version>1.7</version>
                 <style>GOOGLE</style>
               </googleJavaFormat>
-              <removeUnusedImports />
+              <removeUnusedImports></removeUnusedImports>
               <importOrder>
                 <order>java,javax,scala,,org.apache.celeborn</order>
               </importOrder>
@@ -689,6 +684,18 @@
                 <file>${maven.multiModuleProjectDirectory}/.scalafmt.conf</file>
               </scalafmt>
             </scala>
+            <pom>
+              <includes>
+                <include>pom.xml</include>
+              </includes>
+
+              <sortPom>
+                <encoding>UTF-8</encoding>
+                <keepBlankLines>true</keepBlankLines>
+                <nrOfIndentSpace>2</nrOfIndentSpace>
+                <indentBlankLines>false</indentBlankLines>
+              </sortPom>
+            </pom>
           </configuration>
           <executions>
             <execution>
@@ -706,7 +713,7 @@
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
       </plugin>
-      
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
@@ -737,6 +744,10 @@
   <profiles>
     <profile>
       <id>spark-2.4</id>
+      <modules>
+        <module>client-spark/shuffle-manager-common</module>
+        <module>client-spark/${celeborn.shuffle.manager}</module>
+      </modules>
       <properties>
         <jackson.version>2.6.7</jackson.version>
         <jackson.databind.version>2.6.7.3</jackson.databind.version>
@@ -745,10 +756,6 @@
         <spark.version>2.4.8</spark.version>
         <celeborn.shuffle.manager>shuffle-manager-2</celeborn.shuffle.manager>
       </properties>
-      <modules>
-        <module>client-spark/shuffle-manager-common</module>
-        <module>client-spark/${celeborn.shuffle.manager}</module>
-      </modules>
       <dependencies>
         <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -765,6 +772,10 @@
 
     <profile>
       <id>spark-3.0</id>
+      <modules>
+        <module>client-spark/shuffle-manager-common</module>
+        <module>client-spark/${celeborn.shuffle.manager}</module>
+      </modules>
       <properties>
         <jackson.version>2.10.0</jackson.version>
         <jackson.databind.version>2.10.0</jackson.databind.version>
@@ -773,10 +784,6 @@
         <spark.version>3.0.3</spark.version>
         <celeborn.shuffle.manager>shuffle-manager-3</celeborn.shuffle.manager>
       </properties>
-      <modules>
-        <module>client-spark/shuffle-manager-common</module>
-        <module>client-spark/${celeborn.shuffle.manager}</module>
-      </modules>
       <dependencies>
         <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -793,6 +800,10 @@
 
     <profile>
       <id>spark-3.1</id>
+      <modules>
+        <module>client-spark/shuffle-manager-common</module>
+        <module>client-spark/${celeborn.shuffle.manager}</module>
+      </modules>
       <properties>
         <jackson.version>2.10.0</jackson.version>
         <jackson.databind.version>2.10.0</jackson.databind.version>
@@ -801,10 +812,6 @@
         <spark.version>3.1.3</spark.version>
         <celeborn.shuffle.manager>shuffle-manager-3</celeborn.shuffle.manager>
       </properties>
-      <modules>
-        <module>client-spark/shuffle-manager-common</module>
-        <module>client-spark/${celeborn.shuffle.manager}</module>
-      </modules>
       <dependencies>
         <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -821,6 +828,10 @@
 
     <profile>
       <id>spark-3.2</id>
+      <modules>
+        <module>client-spark/shuffle-manager-common</module>
+        <module>client-spark/${celeborn.shuffle.manager}</module>
+      </modules>
       <properties>
         <jackson.version>2.12.3</jackson.version>
         <jackson.databind.version>2.12.3</jackson.databind.version>
@@ -829,10 +840,6 @@
         <spark.version>3.2.2</spark.version>
         <celeborn.shuffle.manager>shuffle-manager-3</celeborn.shuffle.manager>
       </properties>
-      <modules>
-        <module>client-spark/shuffle-manager-common</module>
-        <module>client-spark/${celeborn.shuffle.manager}</module>
-      </modules>
       <dependencies>
         <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -849,6 +856,10 @@
 
     <profile>
       <id>spark-3.3</id>
+      <modules>
+        <module>client-spark/shuffle-manager-common</module>
+        <module>client-spark/${celeborn.shuffle.manager}</module>
+      </modules>
       <properties>
         <jackson.version>2.13.3</jackson.version>
         <jackson.databind.version>2.13.3</jackson.databind.version>
@@ -857,10 +868,6 @@
         <spark.version>3.3.0</spark.version>
         <celeborn.shuffle.manager>shuffle-manager-3</celeborn.shuffle.manager>
       </properties>
-      <modules>
-        <module>client-spark/shuffle-manager-common</module>
-        <module>client-spark/${celeborn.shuffle.manager}</module>
-      </modules>
       <dependencies>
         <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -940,10 +947,10 @@
             <executions>
               <execution>
                 <id>sign-release-artifacts</id>
-                <phase>verify</phase>
                 <goals>
                   <goal>sign</goal>
                 </goals>
+                <phase>verify</phase>
               </execution>
             </executions>
           </plugin>
