--- a/tests/celeborn-spark-it/pom.xml
+++ b/tests/celeborn-spark-it/pom.xml
@@ -86,4 +86,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
+        <configuration>
+          <systemProperties>
+            <spark.driver.memory>5g</spark.driver.memory>
+          </systemProperties>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
