--- a/docker/helm/Chart.yaml
+++ b/docker/helm/Chart.yaml
@@ -18,8 +18,8 @@
 apiVersion: v2
 name: remote-shuffle-service
 description: >
-  Aliyun Remote Shuffle Service(RSS) is dedicated to improving the efficiency and elasticity of different map-reduce engines.
-  RSS provides an elastic and high efficient management service for shuffle data.
+  Celeborn is dedicated to improving the efficiency and elasticity of different map-reduce engines.
+  Celeborn provides an elastic and high efficient management service for shuffle data.
 
 # A chart can be either an 'application' or a 'library' chart.
 #
