--- a/client-spark/shuffle-manager-3/pom.xml
+++ b/client-spark/shuffle-manager-3/pom.xml
@@ -26,7 +26,7 @@
 
   <artifactId>shuffle-manager-3</artifactId>
   <packaging>jar</packaging>
-  <name>Aliyun E-MapReduce Shuffle Service Shuffle Manager for Spark 3</name>
+  <name>Celeborn Shuffle Manager for Spark 3</name>
 
   <dependencies>
     <dependency>
