--- a/server-worker/pom.xml
+++ b/server-worker/pom.xml
@@ -25,7 +25,7 @@
 
   <artifactId>worker</artifactId>
   <packaging>jar</packaging>
-  <name>Aliyun E-MapReduce Shuffle Service Worker Module</name>
+  <name>Celeborn Worker Module</name>
 
   <dependencies>
     <dependency>
