--- a/client-spark/common/pom.xml
+++ b/client-spark/common/pom.xml
@@ -26,7 +26,7 @@
 
   <artifactId>celeborn-spark-client-common_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
-  <name>Celeborn Client Common for Spark</name>
+  <name>Celeborn Client for Spark Common</name>
 
   <dependencies>
     <dependency>
