--- a/master/pom.xml
+++ b/master/pom.xml
@@ -25,7 +25,7 @@
 
   <artifactId>celeborn-master_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
-  <name>Celeborn Master Module</name>
+  <name>Celeborn Master</name>
 
   <dependencies>
     <dependency>
