--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -25,7 +25,7 @@
 
   <artifactId>celeborn-worker_${scala.binary.version}</artifactId>
   <packaging>jar</packaging>
-  <name>Celeborn Worker Module</name>
+  <name>Celeborn Worker</name>
 
   <dependencies>
     <dependency>
